# LogAnalyzer

./: CMakeLists.txt  README.md  codeGen.h  find_dep.c  find_dep.h  graph.c  logAnalyzer.c  opList.c  opList.h  pattern.in  print.c  print.h  tags  util.c  util.h
Backups/: logAnalyzer.c_0713
Backups/0520_2025/: CMakeLists.txt  logAnalyzer.c  opList.c  opList.h  print.c  print.h  util.h
Backups/0520_2025/GraphPrinter/: graphPrinter.c
Backups/0520_2025/PatternDB/: pattern_gen.c
Doc/: algorithm
GIT_DOC/: README.md  git.flow  git.script  push.bash
GraphPrinter/: .graphPrinter.c.swp  graphPrinter.c  graph_printer.h
ISO/: igraph_subisomorphic_lad.c  iso.h  iso_utils.c
PC/: pc_change
PatternDB/: CMakeLists.txt  pattern.h  pattern.in  pattern.in.org  pattern_gen.c
TestRoutines/IO/: CMakeLists.txt  igraph_read_graph_lgl.c  igraph_write_graph_lgl.c
TestRoutines/iso/: CMakeLists.txt  igraph_isomorphic_vf2.c  igraph_subisomorphic_lad.c
TestRoutines/simple/: iso_b03_m1000.A00
TestRoutines/tutorial/: CMakeLists.txt  destroy.c
TestRoutines/tutorial/build1/: CMakeCache.txt  Makefile  cmake_install.cmake
